--- a/css/style.css
+++ b/css/style.css
@@ -1162,6 +1162,8 @@ body {
   -webkit-perspective: 20em;
   perspective: 20em;
   align-content: center;
+  align-self: center;
+
 }
 .snip1418 * {
   -webkit-box-sizing: border-box;
